From 4bb6b15 (closure):
======================

In prisim/closure.py,

(*) In member function __init__() of class ClosurePhase, add input
freqs for initialization. Update member function docstring
accordingly
(*) Add class ClosurePhaseDelaySpectrum along with docstring
(*) Add member function __init__() and FT() along with respective
docstrings under class ClosurePhaseDelaySpectrum
(*) Initialize attributes cPhase, f, df, and cPhaseDS in member
function __init__() of class ClosurePhase

From b5e87ff (closure):
======================

In prisim/closure.py,

(*) Update docstring of class ClosurePhaseDelaySpectrum
(*) Update docstring of __init__() member function of class
ClosurePhaseDelaySpectrum

From aeef394 (closure):
======================

In prisim/closure.py,

(*) Update docstring of class ClosurePhase
(*) Start work on class ClosurePhaseDelaySpectrum

From fb3cfea (closure):
======================

In prisim/closure.py,

(*) Add member function smooth_in_tbins() under class ClosurePhase.
Update class docstring accordingly

From b13de6f (closure):
======================

In prisim/closure.py,

(*) Fix bugs in function npz2hdf5()
(*) Update docstring of function npz2hdf5() and member function
__init__() of class ClosurePhase
(*) Fix bugs in member functions __init__() and expicp() of class
ClosurePhase

From e614307 (closure):
======================

In prisim/closure.py,

(*) Modify member function __init__() to call member function expicp()
both of class ClosurePhase. Modify structure of dictionary attribute
cpinfo to hold 'raw' and 'processed' data containers, and the latter
contains 'native' and 'prelim' containers, each of which contains
'eicp' and 'wts' keys
(*) Modify member function expicp() of class ClosurePhase to compute
the complex exponential and weights as masked arrays under keys
'native/eicp' and 'native/wts' respectively

From d525933 (closure):
======================

In prisim/closure.py,
